[package]
name = "fortune-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.12"
